# doc-qa-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  coverage-badge.yml
backend/: .coveragerc  .env.example  init_chromadb.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4af7ec742262_initial_migration.py
backend/app/: main.py  task.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  documents.py  health.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/schemas/: __init__.py  chat.py  document.py  user.py
backend/app/services/: __init__.py  base.py  chat.py  document.py  document_processor.py  elasticsearch_service.py  embedding.py  rag.py  user.py  vector_store.py
backend/app/utils/: file_utils.py
backend/scripts/: coverage.sh
backend/tests/: conftest.py  test_main.py
