[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-qa-chatbot"
version = "0.1.0"
description = "Document-based Q&A chatbot with RAG capabilities"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.9",
    "uvicorn[standard]>=0.34.3",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.1",
    "greenlet==3.2.3",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "langchain-community==0.3.24",
    "openai>=1.84.0",
    "chromadb>=1.0.12",
    "elasticsearch>=8.18.1",
    "pypdf>=5.6.0",
    "python-docx>=1.1.2",
    "boto3>=1.38.32",
    "redis>=6.2.0",
    "celery==5.5.3",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==1.0.0",
    "coverage==7.2.7",
    "coverage-badge==1.1.2",
    "bandit==1.8.3",
    "black==25.1.0",
    "docformatter==1.7.7",
    "isort==6.0.1",
    "flake8==7.2.0",
    "mypy==1.16.0",
    "types-python-jose>=3.3.4",
    "types-passlib>=1.7.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*", "*.tests*"]

[tool.docformatter]
wrap-summaries = 79
wrap-descriptions = 79
make-summary-multi-line = false
close-quotes-on-newline = true
force-wrap = false
tab-width = 4

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = "^backend/alembic/"

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "chromadb.*",
    "sentence_transformers.*",
    "elasticsearch.*",
]
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
